[package]
name = "bonsai"
version = "0.1.0"
edition = "2024"
authors = ["Patryk Pujanek"]
description = "Bonsai CLI for building and managing games"
repository = "https://github.com/nihiL7331/bonsai"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
ctrlc = "3.5.1"
dirs = "6.0.0"
git2 = { version = "0.20.3", features = ["vendored-openssl"] }
image = "0.25.9"
indicatif = "0.18.3"
reqwest = { version = "0.12.26", features = ["blocking"] }
rouille = "3.6.2"
scopeguard = "1.2.0"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
texture_packer = "0.30.0"
thiserror = "2.0.17"
toml = "0.9.10"
toml_edit = "0.24.0"
url = "2.5.7"
wait-timeout = "0.2.1"
walkdir = "2.5.0"
zip = "7.0.0"
