[package]
name = "bonsai-cli"
version = "0.1.5"
edition = "2024"
authors = ["Patryk Pujanek"]
description = "CLI for the bonsai 2D game framework."
repository = "https://github.com/nihiL7331/bonsai"
license = "MIT"
readme = "README.md"

[[bin]]
name = "bonsai"
path = "src/main.rs"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
ctrlc = "3.5.1"
dirs = "6.0.0"
image = { version = "0.25.9", default-features = false, features = ["png"] }
indicatif = "0.18.3"
regex = "1.12.2"
rouille = "3.6.2"
scopeguard = "1.2.0"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.24.0"
texture_packer = "0.30.0"
thiserror = "2.0.17"
toml_edit = { version = "0.24.0", features = ["serde"] }
ureq = "3.1.4"
url = "2.5.7"
wait-timeout = "0.2.1"
walkdir = "2.5.0"
zip = "7.0.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
